--- a/.github/workflows/generator_container_slsa3.yml
+++ b/.github/workflows/generator_container_slsa3.yml
@@ -131,10 +131,7 @@ jobs:
           predicate_name="predicate.json"
           "$GITHUB_WORKSPACE/$BUILDER_BINARY" generate --predicate="$predicate_name"
 
-          # NOTE: Disable cosign's ambient providers because we use 'cosign login'.
-          COSIGN_EXPERIMENTAL=1 cosign attest \
-            --oidc-disable-ambient-providers \
-            --predicate="$predicate_name" \
+          COSIGN_EXPERIMENTAL=1 cosign attest --predicate="$predicate_name" \
             --type slsaprovenance \
             --force \
             "${UNTRUSTED_IMAGE}@${UNTRUSTED_DIGEST}"
