--- a/.github/workflows/builder_go_slsa3.yml
+++ b/.github/workflows/builder_go_slsa3.yml
@@ -103,7 +103,8 @@ jobs:
     steps:
       - name: Generate builder binary
         id: generate
-        uses: slsa-framework/slsa-github-generator/.github/actions/generate-builder@v1.4.0-rc.2
+        # uses: slsa-framework/slsa-github-generator/.github/actions/generate-builder@v1.4.0-rc.2
+        uses: ianlewis/slsa-github-generator/.github/actions/generate-builder@v1.4.0-rc.2
         with:
           repository: "${{ needs.detect-env.outputs.repository }}"
           ref: "${{ needs.detect-env.outputs.ref }}"
