--- a/.github/workflows/generator_container_slsa3.yml
+++ b/.github/workflows/generator_container_slsa3.yml
@@ -84,7 +84,8 @@ jobs:
       packages: write # Needed to login and upload attestations to ghcr.io.
     steps:
       - name: Generate builder
-        uses: slsa-framework/slsa-github-generator/.github/actions/generate-builder@v1.4.0-rc.2
+        # uses: slsa-framework/slsa-github-generator/.github/actions/generate-builder@v1.4.0-rc.2
+        uses: ianlewis/slsa-github-generator/.github/actions/generate-builder@v1.4.0-rc.2
         with:
           repository: "${{ needs.detect-env.outputs.repository }}"
           ref: "${{ needs.detect-env.outputs.ref }}"
