--- a/.github/workflows/generator_container_slsa3.yml
+++ b/.github/workflows/generator_container_slsa3.yml
@@ -125,7 +125,8 @@ jobs:
       - name: Generate builder
         id: generate-builder
         continue-on-error: true
-        uses: slsa-framework/slsa-github-generator/.github/actions/generate-builder@v1.5.0-rc.0
+        # uses: slsa-framework/slsa-github-generator/.github/actions/generate-builder@v1.5.0-rc.0
+        uses: ianlewis/slsa-github-generator/.github/actions/generate-builder@v1.5.0-rc.0
         with:
           repository: "${{ needs.detect-env.outputs.repository }}"
           ref: "${{ needs.detect-env.outputs.ref }}"
