--- a/.github/workflows/e2e.verify-token.schedule.yml
+++ b/.github/workflows/e2e.verify-token.schedule.yml
@@ -64,58 +64,68 @@ jobs:
           ./.github/workflows/scripts/schedule.actions/verify-setup-token.sh
           echo "slsa-token=$SLSA_TOKEN" >> "$GITHUB_OUTPUT"
 
-  verify-token:
+  verify-token-success:
     permissions:
       contents: read
     runs-on: ubuntu-latest
     needs: [setup-token]
     steps:
-      - uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab # v3.5.2
       - id: verify
-        uses: ./.github/actions/verify-token
+        uses: ./.github/workflows/e2e.verify-token.reusable.yml
         with:
           slsa-unverified-token: ${{ needs.setup-token.outputs.valid-token }}
           slsa-workflow-recipient: "delegator_generic_slsa3.yml"
           output-predicate: predicate.json
-      - env:
-          VERIFIED_TOKEN: ${{ steps.verify.outputs.slsa-verified-token }}
-          TOOL_REPOSITORY: ${{ steps.verify.outputs.tool-repository }}
-          TOOL_REF: ${{ steps.verify.outputs.tool-ref }}
-          PREDICATE: predicate.json
-        run: ./.github/workflows/scripts/schedule.actions/verify-verified-token.sh
-      - id: verify-mismatch-recipient
-        uses: ./.github/actions/verify-token
-        continue-on-error: true
+
+  verify-token-mismatch-recipient:
+    permissions:
+      contents: read
+    runs-on: ubuntu-latest
+    needs: [setup-token]
+    steps:
+      - id: verify
+        uses: ./.github/workflows/e2e.verify-token.reusable.yml
         with:
-          slsa-unverified-token: ${{ steps.verify.outputs.slsa-verified-token }}
+          slsa-unverified-token: ${{ needs.setup-token.outputs.valid-token }}
           slsa-workflow-recipient: "elegator_generic_slsa3.yml"
           output-predicate: mismatch-recipient-predicate.json
-      - id: verify-mismatch-token
-        uses: ./.github/actions/verify-token
-        continue-on-error: true
+          continue-on-error: true
+
+  verify-token-mismatch-token:
+    permissions:
+      contents: read
+    runs-on: ubuntu-latest
+    needs: [setup-token]
+    steps:
+      - id: verify
+        uses: ./.github/workflows/e2e.verify-token.reusable.yml
         with:
           slsa-unverified-token: aGVsbG8K
           slsa-workflow-recipient: "delegator_generic_slsa3.yml"
           output-predicate: mismatch-token-predicate.json
-      - id: verify-invalid-mask
-        uses: ./.github/actions/verify-token
-        continue-on-error: true
+          continue-on-error: true
+
+  verify-token-invalid-mask:
+    permissions:
+      contents: read
+    runs-on: ubuntu-latest
+    needs: [setup-token]
+    steps:
+      - id: verify
+        uses: ./.github/workflows/e2e.verify-token.reusable.yml
         with:
           # name7 does not exist in the inputs so it should trigger an error.
           slsa-unverified-token: ${{ needs.setup-token.outputs.invalid-mask-token }}
           slsa-workflow-recipient: "delegator_generic_slsa3.yml"
           output-predicate: invalid-mask-predicate.json
-      - env:
-          SUCCESS: ${{ steps.verify-mismatch-recipient.outcome == 'failure' && steps.verify-mismatch-token.outcome == 'failure' && steps.verify-invalid-mask.outcome == 'failure' }}
-        run: |
-          [ "$SUCCESS" == "true" ]
-      # TODO(1419): Add more tests that manipulate the token.
+          continue-on-error: true
+
+  # TODO(1419): Add more tests that manipulate the token.
 
   if-succeed:
     needs: [setup-token, verify-token]
     runs-on: ubuntu-latest
-    # We use `== 'failure'` instead of ` != 'success'` because we want to ignore skipped jobs, if there are any.
-    if: github.event_name != 'workflow_dispatch' && needs.verify-token.result != 'failure' && needs.setup-token.result != 'failure'
+    if: github.event_name != 'workflow_dispatch' && needs.setup-token.result != 'failure' && needs.verify-token-success.result != 'failure' && needs.verify-token-mismatch-recipient.result != 'failure' && needs.verify-token-mismatch-token.result != 'failure' && needs.verify-token-invalid-mask.result != 'failure'
     permissions:
       contents: read
       issues: write
@@ -129,7 +139,8 @@ jobs:
   if-failed:
     needs: [setup-token, verify-token]
     runs-on: ubuntu-latest
-    if: always() && github.event_name != 'workflow_dispatch' && (needs.verify-token.result == 'failure' || needs.setup-token.result == 'failure')
+    # We use `== 'failure'` instead of ` != 'success'` because we want to ignore skipped jobs, if there are any.
+    if: always() && github.event_name != 'workflow_dispatch' && (needs.setup-token.result == 'failure' || needs.verify-token-success.result == 'failure' || needs.verify-token-mismatch-recipient.result == 'failure' || needs.verify-token-mismatch-token.result == 'failure' || needs.verify-token-invalid-mask.result == 'failure')
     permissions:
       contents: read
       issues: write
