Enable testing for generate-builder
Signed-off-by: Ian Lewis <ianlewis@google.com>

--- a/.github/workflows/generator_container_slsa3.yml
+++ b/.github/workflows/generator_container_slsa3.yml
@@ -136,6 +136,7 @@ jobs:
           # NOTE: We are using the generic generator.
           directory: "${{ env.BUILDER_DIR }}"
           allow-private-repository: ${{ inputs.private-repository }}
+          testing: true
 
       - id: auth
         name: Authenticate to Google Cloud
