--- a/.github/workflows/generator_container_slsa3.yml
+++ b/.github/workflows/generator_container_slsa3.yml
@@ -125,7 +125,8 @@ jobs:
       - name: Generate builder
         id: generate-builder
         continue-on-error: true
-        uses: slsa-framework/slsa-github-generator/.github/actions/generate-builder@v1.6.0-rc.3
+        # uses: slsa-framework/slsa-github-generator/.github/actions/generate-builder@v1.6.0-rc.3
+        uses: ianlewis/slsa-github-generator/.github/actions/generate-builder@v1.6.0-rc.3
         with:
           repository: "${{ needs.detect-env.outputs.repository }}"
           ref: "${{ needs.detect-env.outputs.ref }}"
@@ -135,6 +136,7 @@ jobs:
           # NOTE: We are using the generic generator.
           directory: "${{ env.BUILDER_DIR }}"
           allow-private-repository: ${{ inputs.private-repository }}
+          testing: true
 
       - id: auth
         name: Authenticate to Google Cloud
