--- a/.github/workflows/generator_generic_slsa3.yml
+++ b/.github/workflows/generator_generic_slsa3.yml
@@ -154,7 +154,8 @@ jobs:
       - name: Generate builder
         id: generate-builder
         continue-on-error: true
-        uses: slsa-framework/slsa-github-generator/.github/actions/generate-builder@v1.6.0-rc.3
+        # uses: slsa-framework/slsa-github-generator/.github/actions/generate-builder@v1.6.0-rc.3
+        uses: ianlewis/slsa-github-generator/.github/actions/generate-builder@v1.6.0-rc.3
         with:
           repository: "${{ needs.detect-env.outputs.repository }}"
           ref: "${{ needs.detect-env.outputs.ref }}"
@@ -163,6 +164,7 @@ jobs:
           compile-builder: "${{ inputs.compile-generator }}"
           directory: "${{ env.BUILDER_DIR }}"
           allow-private-repository: ${{ inputs.private-repository }}
+          testing: true
 
       - name: Create and sign provenance
         id: sign-prov
