--- a/actions/nodejs/publish/action.yml
+++ b/actions/nodejs/publish/action.yml
@@ -50,7 +50,9 @@ runs:
     # TODO(#1897): Use upstream version of npm
     - name: Setup npm
       id: setup-npm
-      uses: slsa-framework/slsa-github-generator/actions/nodejs/setup-npm@main
+      # FIXME: Testing bdehamer's branch for https://github.com/npm/cli/pull/6490
+      # uses: slsa-framework/slsa-github-generator/actions/nodejs/setup-npm@main
+      uses: ianlewis/slsa-github-generator/actions/nodejs/setup-npm@test-npm-package-path
 
     - name: Create temp dir
       id: temp-dir
