Fix option name
Signed-off-by: Ian Lewis <ianlewis@google.com>

--- a/actions/nodejs/publish/action.yml
+++ b/actions/nodejs/publish/action.yml
@@ -93,7 +93,7 @@ runs:
 
         # FIXME: Testing bdehamer's branch for https://github.com/npm/cli/pull/6490
         # publish_flags="--provenance ${ATTESTATION_PATH}"
-        publish_flags="--provenance-path ${ATTESTATION_PATH}"
+        publish_flags="--provenance-file ${ATTESTATION_PATH}"
         if [[ "${ACCESS}" != "" ]]; then
           publish_flags="${publish_flags} --access=${ACCESS}"
         fi
